# todo-app-fastapi

./: .gitignore  LICENSE  README.md  database.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: adb4275433f9_create_task_table.py
app/: main.py
app/api/routers/: tasks.py
app/cores/: database.py  database_test.py
app/dependencies/: task.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py
tests/api/routers/: test_tasks.py
